--- a/index.mdx
+++ b/index.mdx
@@ -4,7 +4,7 @@ icon: "book-open"
 description: "Skip months of setup and configuration with our complete React Native solution. Go from idea to app store in days, not months! "
 ---
 
-<Card title="Buy This Boilerplate" icon="wallet" href="https://info.buildwithai.io/" cta="Buy Now">
+<Card title="Get Access to this Boilerplate" icon="wallet" href="https://app.buildwithai.io/" cta="Buy Now">
   Ship your app in days, not months.
 </Card>
 
