--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -53,19 +53,11 @@ Before you begin, follow our guides to set up the following tools and accounts (
     </Info>
   </Step>
   <Step title="Set Up Environment Variables">
-    Create your environment file by copying the example:
+    Create your environment file by running this in the terminal:
 
     ```bash
     cp .env.example .env
     ```
-
-    <Accordion title="What are environment variables?">
-      Environment variables store configuration settings that may change between environments (development, staging, production).
-
-      Your .env file will store API keys, service URLs, and other configuration values that should not be committed to source control.
-
-      You'll add specific values as you follow the next guides in this documentation.
-    </Accordion>
   </Step>
 </Steps>
 
