--- a/quickstart/setup-cursor.mdx
+++ b/quickstart/setup-cursor.mdx
@@ -5,106 +5,41 @@ description: "Official guide to install Cursor IDE for React Native development"
 
 ## Download Cursor
 
-Get Cursor for your platform:
-
-<Tabs>
-  <Tab title="Windows">
-    [Download for Windows](https://cursor.com/downloads)
-  </Tab>
-  <Tab title="macOS">
-    [Download for macOS](https://cursor.com/downloads)
-  </Tab>
-  <Tab title="Linux">
-    [Download for Linux](https://cursor.com/downloads)
-  </Tab>
-</Tabs>
-
-<Info>Visit [cursor.com](https://cursor.com) and click "Download" for the recommended version for your system</Info>
+Visit [cursor.com/downloads](https://cursor.com/downloads) and download the version for your system (Windows, macOS, or Linux).
 
 ## Install Cursor
 
-1. Download the installer for your platform from the link above
-2. Run the installer and follow your system's standard installation process
-3. Launch Cursor to begin setup
+1. Run the downloaded installer
+2. Launch Cursor when installation is complete
 
 ## First-Time Setup
 
 <Steps>
   <Step title="Launch Cursor">
-    Open Cursor for the first time to begin the onboarding process.
+    Open Cursor for the first time. You'll see a welcome screen with setup options.
   </Step>
   
   <Step title="Choose Keyboard Shortcuts">
-    Select your preferred keyboard shortcuts:
-    - **VS Code** - Use familiar VS Code keybindings
-    - **Default** - Use Cursor's default shortcuts
+    Pick how you want to control Cursor:
+    - **VS Code** - If you've used VS Code before (recommended)
+    - **Default** - If you're new to code editors
     
-    <Tip>If you're coming from VS Code, select VS Code shortcuts for a familiar experience</Tip>
+    <Tip>Most developers choose VS Code shortcuts since they're widely used</Tip>
   </Step>
   
   <Step title="Pick a Theme">
-    Choose your preferred color scheme from the available options.
+    Choose a color scheme you like. You can always change this later.
   </Step>
   
   <Step title="Set Terminal Preferences">
-    Configure your terminal settings according to your development preferences.
+    Choose your preferred terminal settings. The default options work fine for most people.
   </Step>
   
-  <Step title="Optional: Create Account">
-    Sign up for a Cursor account to unlock full AI features.
-    
-    <Info>Account signup is optional but recommended for accessing advanced AI capabilities</Info>
+  <Step title="Create Account">
+    Sign up for a free Cursor account to unlock AI features.
   </Step>
 </Steps>
 
-## Explore Cursor Features
-
-After installation, you can:
-
-- **AI Code Assistance**: Get intelligent code suggestions and completions
-- **Codebase Indexing**: Cursor automatically indexes your projects for better AI understanding
-- **Multi-language Support**: Works with all major programming languages including TypeScript/JavaScript
-- **VS Code Compatibility**: Import extensions and settings from VS Code
-
-<Note>When you open a project, Cursor will automatically start indexing your codebase. This process takes 1-15 minutes depending on project size</Note>
-
-## Essential Keyboard Shortcuts
-
-Learn these shortcuts to boost your productivity with Cursor:
-
-### AI Features
-- `Ctrl+L` (Windows/Linux) or `Cmd+L` (macOS) - Add selection to new chat
-- `Ctrl+Shift+L` - Add selected code to chat
-- `Ctrl+K` - Open inline edit
-- `Ctrl+/` - Loop between AI models
-- `Tab` - Accept code suggestion
-- `Ctrl+Enter` - Search codebase in chat
-
-### Navigation & Interface
-- `Ctrl+P` / `Cmd+P` - Open file picker (quickly search for a file to open)
-- `Ctrl+Shift+P` / `Cmd+Shift+P` - Open command palette
-- `Ctrl+.` / `Cmd+.` - Open mode menu
-- `Ctrl+I` / `Cmd+I` - Toggle sidepanel
-- `Ctrl+T` / `Cmd+T` - Open new chat tab
-- `Ctrl+[` and `Ctrl+]` - Navigate between chat tabs
-
-<Tip>Use `Ctrl+K` for quick inline edits and `Ctrl+L` to start conversations about your code</Tip>
-
-## @-Symbols for Context
-
-Use @-symbols in chat to provide precise context to Cursor's AI:
-
-- **@Files** - Reference specific project files
-- **@Folders** - Reference entire directories (like `/components` or `/lib`)
-- **@Code** - Reference specific functions or components
-- **@Git** - Access git history and recent changes
-- **@Recent Changes** - Track your latest modifications
-
-### Usage Tips
-- Type `@` in chat to see available symbols
-- Use arrow keys to navigate suggestions
-- Press `Enter` to select
-- Combine multiple @-symbols for better context
-
-<Info>Example: "@Files app/(tabs)/index.tsx @Recent Changes" gives Cursor context about your main screen and recent edits</Info>
-
+<Check>
+  You've successfully installed and configured Cursor IDE! You can now open projects and start developing.
+</Check>
