--- a/quickstart/setup-nodejs.mdx
+++ b/quickstart/setup-nodejs.mdx
@@ -23,7 +23,8 @@ Node.js is required to run your React Native app and manage packages. Here's how
 2. Follow the installation wizard
 3. Accept the license agreement
 4. Keep all default settings
-5. Click "Install" and wait for completion
+5. Make sure **Add to PATH** is selected during installation
+6. Click "Install" and wait for completion
 
 ### Linux (Ubuntu/Debian):
 ```bash
@@ -61,9 +62,8 @@ You should see something like `9.6.7` or higher.
 **Command not found?**
 - Restart your terminal/command prompt
 - On Windows, restart your computer
-- Make sure you selected "Add to PATH" during installation
+- Make sure you selected **Add to PATH** during installation
 
 **Need to update?**
 - Download the latest version from [nodejs.org](https://nodejs.org)
 - Or use npm: `npm install -g npm@latest`
-
