--- a/quickstart/setup-windsurf.mdx
+++ b/quickstart/setup-windsurf.mdx
@@ -3,36 +3,26 @@ title: "Install Windsurf IDE"
 description: "Official guide to install Windsurf IDE for React Native development"
 ---
 
-## Prerequisites
-
-Check that your system meets the minimum requirements:
-
-<Tabs>
-  <Tab title="Windows">
-    Windows 10 or later
-  </Tab>
-  <Tab title="macOS">
-    OS X Yosemite or later
-  </Tab>
-  <Tab title="Linux">
-    Ubuntu 20.04+ (glibc ≥ 2.31, glibcxx ≥ 3.4.26)
-    
-    Other distributions: glibc ≥ 2.28, glibcxx ≥ 3.4.25
-  </Tab>
-</Tabs>
-
 ## Download Windsurf
 
-Download the installer for your platform:
+Check your system requirements and download the installer for your platform:
 
 <Tabs>
   <Tab title="Windows">
+    **Requirements**: Windows 10 or later
+    
     [Download for Windows](https://windsurf.com/windsurf/download)
   </Tab>
   <Tab title="macOS">
+    **Requirements**: OS X Yosemite or later
+    
     [Download for macOS](https://windsurf.com/windsurf/download_mac)
   </Tab>
   <Tab title="Linux">
+    **Requirements**: Ubuntu 20.04+ (glibc ≥ 2.31, glibcxx ≥ 3.4.26)
+    
+    Other distributions: glibc ≥ 2.28, glibcxx ≥ 3.4.25
+    
     [Download for Linux](https://windsurf.com/windsurf/download_linux)
   </Tab>
 </Tabs>
@@ -70,39 +60,8 @@ Download the installer for your platform:
     
     <Warning>A Windsurf account is required to use the IDE</Warning>
   </Step>
-  
-  <Step title="Optional: Install Windsurf in PATH">
-    During setup, you'll have the option to install Windsurf in your system PATH.
-    
-    **Benefits of installing in PATH:**
-    - Open projects from command line with `windsurf .`
-    - Launch Windsurf from any terminal or command prompt
-    - Integrate with other development tools
-    
-    <Tip>Recommended for developers who frequently use the command line</Tip>
-  </Step>
 </Steps>
 
-## Explore Windsurf Features
-
-After installation, you can:
-
-- **Access Cascade**: Use the AI assistant panel for code generation and help
-- **Open projects**: Use the Command Palette (`Ctrl+Shift+P` / `Cmd+Shift+P`) to open folders or remote servers
-- **Generate projects**: Use AI to create new projects
-- **Configure settings**: Customize Windsurf to your preferences
-
-<Info>Windsurf includes built-in AI assistance and doesn't support extensions from external marketplaces</Info>
-
-## Updates
-
-Windsurf will notify you when updates are available:
-
-- Click **"Restart to Update"** when prompted
-- Manually check: Profile dropdown > **"Check for Updates"**
-- Or use Command Palette > **"Check for Updates"**
-
-<Accordion title="Need to restart onboarding">
-  Open Command Palette and search for "Reset Onboarding" to restart the setup process.
-</Accordion>
-
+<Check>
+  You've successfully installed and configured Windsurf IDE! You can now open projects and start developing.
+</Check>
