--- a/features/admob-setup.mdx
+++ b/features/admob-setup.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'AdMob'
-description: 'How to set up Google AdMob mobile ads in your app'
-icon: 'dollar-sign'
+title: "AdMob"
+description: "How to set up Google AdMob mobile ads in your app"
+icon: "dollar-sign"
 ---
 
 # AdMob Integration
@@ -72,3 +72,16 @@ EXPO_PUBLIC_ADMOB_BANNER_IOS=ca-app-pub-xxxxxxxxxxxxxxxx/xxxxxxxxxx
 <Warning>
   Only enable these variables for Production builds. Make sure "Preview" and "Development" environments are unchecked.
 </Warning>
+
+## Testing Your Configuration
+
+1. **Test with Development Build**: Open your development build and navigate to screens with ads
+2. **Verify Test Ads**: Ensure test ad units are displaying correctly
+3. **Check Console**: Look for any AdMob-related errors in the console
+4. **Test Different Ad Formats**: Verify banner, interstitial, and other ad types work properly
+
+## Additional Resources
+
+- [Google AdMob Documentation](https://developers.google.com/admob)
+- [Expo AdMob Guide](https://docs.expo.dev/versions/latest/sdk/admob/)
+- [Supabase Setup](/quickstart/supabase-setup) - Required for authentication
