--- a/features/i18n.mdx
+++ b/features/i18n.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Internationalization'
-description: 'Using translations in your app'
-icon: 'globe'
+title: "Internationalization"
+description: "Using translations in your app"
+icon: "globe"
 ---
 
 # Making Your App Multilingual
@@ -247,3 +247,10 @@ To make sure your translations work correctly:
 - **Test thoroughly**: Test all languages after adding new translations
 - **Use descriptive keys**: Keys like "profile.nameLabel" are self-explanatory
 </Tip>
+
+## Additional Resources
+
+- [React Native i18n Best Practices](https://reactnative.dev/docs/internationalization)
+- [i18next Documentation](https://www.i18next.com/)
+- [Expo Localization](https://docs.expo.dev/versions/latest/sdk/localization/)
+- [Language Codes Reference](https://www.loc.gov/standards/iso639-2/php/code_list.php)
