--- a/features/in-app-purchases/overview.mdx
+++ b/features/in-app-purchases/overview.mdx
@@ -34,16 +34,16 @@ In-app purchases involve several components working together:
 - [App Store Connect Setup](./app-store-connect-setup) - Create and configure your iOS app
 
 ### 2. Product Configuration
-- [Android Products Setup](./android-products) - Create subscription products for Android
-- [iOS Products Setup](./ios-products) - Create subscription products for iOS
+- [Android Products Setup](./android-products.mdx) - Create subscription products for Android
+- [iOS Products Setup](./ios-products.mdx) - Create subscription products for iOS
 
 ### 3. Testing Configuration
 - [Android Closed Testing](./closed-testing) - Set up testing for Android in-app purchases
 - [iOS Sandbox Testing](./ios-sandbox) - Test in-app purchases on iOS
 
 ### 4. Integration
-- [RevenueCat Setup](./revenuecat) - Configure your products and purchases
-- [Superwall Setup](./superwall) - Configure paywalls
+- [RevenueCat Setup](./revenuecat.mdx) - Configure your products and purchases
+- [Superwall Setup](./superwall.mdx) - Configure paywalls
 
 ## Enable Billing in Your Project
 
