--- a/features/mcp.mdx
+++ b/features/mcp.mdx
@@ -101,21 +101,37 @@ Once the MCP server is set up, you can immediately start using it with Cascade:
 
 ### Example prompts to Cascade:
 
-```
+```text
 How do I set up Google authentication in the BuildWithAI Boilerplate?
 ```
 
-```
+```text
 Show me how to implement in-app purchases for iOS in the BuildWithAI Boilerplate?
 ```
 
-```
+```text
 Add some appropriate icons to this component using the BuildWithAI Boilerplate.
 ```
 
 Cascade will search through the BuildWithAI documentation and provide you with relevant information, code examples, and implementation guides directly in the chat.
 
 <Check>The BuildWithAI MCP server provides access to our complete documentation</Check>
+
+## Testing Your MCP Server
+
+To verify that your MCP server is working correctly:
+
+1. **Test Basic Query**: Ask Cascade a simple question about BuildWithAI Boilerplate
+2. **Verify Response**: Ensure the response includes relevant documentation information
+3. **Test Code Examples**: Ask for specific code examples and verify they're accurate
+4. **Check Links**: Verify that any links provided in responses are working
+
+## Additional Resources
+
+- [Model Context Protocol Documentation](https://modelcontextprotocol.io/)
+- [Cursor IDE Documentation](https://cursor.sh/docs)
+- [Windsurf IDE Documentation](https://windsurf.ai/docs)
+- [BuildWithAI Boilerplate Repository](https://github.com/buildwithai/boilerplate)
 
 ## Troubleshooting
 
