--- a/features/posthog-setup.mdx
+++ b/features/posthog-setup.mdx
@@ -4,9 +4,13 @@ description: "Add powerful analytics to your app with PostHog integration"
 icon: "chart-line"
 ---
 
+# Setting Up PostHog Analytics
+
 This boilerplate comes with built-in support for PostHog analytics, helping you understand how users interact with your app. Let's set it up!
 
-## Step 1: Create and Configure PostHog Account
+## Setup Process
+
+### Step 1: Create and Configure PostHog Account
 
 <Steps>
   <Step title="Create a PostHog Account">
@@ -38,7 +42,7 @@ This boilerplate comes with built-in support for PostHog analytics, helping you 
   </Step>
 </Steps>
 
-## Step 2: Get API Credentials
+### Step 2: Get API Credentials
 
 <Steps>
   <Step title="Copy Your API Key and Host">
@@ -50,7 +54,7 @@ This boilerplate comes with built-in support for PostHog analytics, helping you 
   </Step>
 </Steps>
 
-## Step 3: Configure Your Application
+### Step 3: Configure Your Application
 
 <Steps>
   <Step title="Configure Environment Variables">
@@ -76,7 +80,7 @@ This boilerplate comes with built-in support for PostHog analytics, helping you 
   </Step>
 </Steps>
 
-## Step 4: Track User Events
+### Step 4: Track User Events
 
 <Steps>
   <Step title="Implement Event Tracking">
