--- a/features/push-setup.mdx
+++ b/features/push-setup.mdx
@@ -75,7 +75,7 @@ Before implementing push notifications in your app, you need to set up the neces
 
     <Accordion title="Adding Push Notifications After Initial Build">
       1. **Run the EAS credentials command:**
-         ```sh
+         ```bash
          eas credentials --platform ios
          ```
          - Choose `Push Notifications: Manage your Apple Push Notifications Key`.
