--- a/features/sentry-setup.mdx
+++ b/features/sentry-setup.mdx
@@ -50,3 +50,19 @@ icon: "bug"
     5. Confirm that your test errors appear in the dashboard
   </Step>
 </Steps>
+
+## Testing Your Configuration
+
+To verify that Sentry is working correctly:
+
+1. **Test Error Reporting**: Use the test button to generate a test error
+2. **Check Dashboard**: Verify the error appears in your Sentry dashboard
+3. **Test Different Error Types**: Try different types of errors (JavaScript, native, etc.)
+4. **Verify Environment**: Ensure errors are tagged with the correct environment (development, production)
+
+## Additional Resources
+
+- [Sentry Documentation](https://docs.sentry.io/platforms/react-native/)
+- [Sentry React Native SDK](https://github.com/getsentry/sentry-react-native)
+- [Expo Sentry Integration](https://docs.expo.dev/guides/using-sentry/)
+- [Error Monitoring Best Practices](https://docs.sentry.io/product/error-monitoring/)
