--- a/features/ui-styling-guide.mdx
+++ b/features/ui-styling-guide.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Styling System'
-description: 'Build beautiful interfaces with React Native Reusables and your pre-configured design system'
+title: "Styling System"
+description: "Build beautiful interfaces with React Native Reusables and your pre-configured design system"
 ---
 
 This guide introduces you to **NativeWind** (styling) and **React Native Reusables** (components) that power your app's UI system.
