--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -3,6 +3,8 @@ title: "1. Setup Boilerplate"
 description: "Get your BuildWithAI boilerplate up and running in minutes"
 ---
 
+# Setting Up Your BuildWithAI Boilerplate
+
 <Note>
   This is the first step in setting up your React Native app. Complete this guide before moving to the next steps.
 </Note>
