--- a/features/push-setup.mdx
+++ b/features/push-setup.mdx
@@ -88,7 +88,7 @@ Before implementing push notifications in your app, you need to set up the neces
 
 Follow the implementation instructions in the `integrations/push/README.md` file included in your boilerplate codebase. This file contains all necessary steps for integrating push notifications in your application, including:
 
-- Code configuration and uncommenting
+- Code configuration
 - Integration of the `google-services.json` file 
 - Required app.json settings
 - Build instructions
